RESOLVED FIXED184326
WebContent process sometimes hangs in WebProcess::ensureNetworkProcessConnection
https://bugs.webkit.org/show_bug.cgi?id=184326
Summary WebContent process sometimes hangs in WebProcess::ensureNetworkProcessConnection
Ryosuke Niwa
Reported 2018-04-04 22:48:27 PDT
Sometimes we see WebContent process hanging inside WebProcess::ensureNetworkProcessConnection while it's getting started up. <rdar://problem/38563780>
Attachments
Patch (6.12 KB, patch)
2018-04-04 23:03 PDT, Ryosuke Niwa
no flags
Patch for landing (6.15 KB, patch)
2018-04-05 13:36 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2018-04-04 23:03:12 PDT
Chris Dumez
Comment 2 2018-04-05 13:22:48 PDT
Comment on attachment 337255 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=337255&action=review > Source/WebKit/Platform/IPC/Connection.h:340 > + bool m_initializingSendSource { false }; I think we should use a prefix since this is a Boolean variable, I suggest: m_isInitializingSendSource.
Ryosuke Niwa
Comment 3 2018-04-05 13:25:42 PDT
(In reply to Chris Dumez from comment #2) > Comment on attachment 337255 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=337255&action=review > > > Source/WebKit/Platform/IPC/Connection.h:340 > > + bool m_initializingSendSource { false }; > > I think we should use a prefix since this is a Boolean variable, I suggest: > m_isInitializingSendSource. Sure, will fix. Thanks for the review.
Ryosuke Niwa
Comment 4 2018-04-05 13:36:26 PDT
Created attachment 337293 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-04-05 14:21:55 PDT
Comment on attachment 337293 [details] Patch for landing Clearing flags on attachment: 337293 Committed r230314: <https://trac.webkit.org/changeset/230314>
WebKit Commit Bot
Comment 6 2018-04-05 14:21:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.