Source/WebKit/Platform/IPC/Connection.h
@@ -326,6 +326,7 @@ private:
     // Called on the connection queue.
     void receiveSourceEventHandler();
     void initializeSendSource();
+    void resumeSendSource();
 
     mach_port_t m_sendPort { MACH_PORT_NULL };
     dispatch_source_t m_sendSource { nullptr };
@@ -334,6 +335,7 @@ private:
     dispatch_source_t m_receiveSource { nullptr };
 
     std::unique_ptr<MachMessage> m_pendingOutgoingMachMessage;
+    bool m_isInitializingSendSource { false };
 
     OSObjectPtr<xpc_connection_t> m_xpcConnection;
 #elif OS(WINDOWS)
